# python-agentframework-demos

./: .env.sample  AGENTS.md  README.md  pyproject.toml  requirements.txt  upgrade_plan.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/prompts/: update_translations.prompt.md
examples/: agent_basic.py  agent_durabletask.py  agent_evaluation.py  agent_evaluation_batch.py  agent_evaluation_generate.py  agent_history_redis.py  agent_history_sqlite.py  agent_knowledge_aisearch.py  agent_knowledge_pg.py  agent_knowledge_pg_rewrite.py  agent_knowledge_postgres.py  agent_knowledge_sqlite.py  agent_mcp_local.py  agent_mcp_remote.py  agent_memory_mem0.py  agent_memory_redis.py  agent_middleware.py  agent_otel_appinsights.py  agent_otel_aspire.py  agent_redteam.py  agent_session.py  agent_summarization.py  agent_supervisor.py  agent_tool.py  agent_tool_approval.py  agent_tools.py  agent_with_subagent.py  agent_without_subagent.py  mcp_server.py  openai_tool_calling.py  redis_history_provider.py  workflow_agents.py  workflow_agents_concurrent.py  workflow_agents_sequential.py  workflow_agents_streaming.py  workflow_aggregator_ranked.py  workflow_aggregator_structured.py  workflow_aggregator_summary.py  workflow_aggregator_voting.py  workflow_basic.py  (+19 more)
examples/spanish/: README.md  agent_basic.py  agent_durabletask.py  agent_evaluation.py  agent_evaluation_batch.py  agent_evaluation_generate.py  agent_history_redis.py  agent_history_sqlite.py  agent_knowledge_aisearch.py  (+50 more)
infra/: dts.bicep  main.bicep  main.parameters.json  write_dot_env.ps1  write_dot_env.sh
(+2 files in other folders)
